--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                 進入價目表
             </a>
             
-            <a href="https://gguosong.gitlab.io/string/" 
+            <a href="https://funnysong.cn/" 
                target="_blank"
                class="btn btn-secondary"
                id="guideBtn">
