--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         /* 針對移動設備優化背景 */
         @media (max-width: 768px) {
             body {
-                background-size: 80% auto;
-                background-position: top center;
+                background-size: 180% auto;
+                background-position: center;
             }
         }
 
