--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
         @media (max-width: 768px) {
             body {
                 background-size: 150% auto;
-                background-position: top center;
+                background-position: center;
             }
         }
 
         /* 卡片容器 (玻璃質感) */
         .container {
             background-color: rgba(255, 255, 255, 0.05);
-            backdrop-filter: blur(12px);
+            backdrop-filter: blur(5px);
             border-radius: 16px;
             box-shadow: 0 8px 32px rgba(0, 0, 0, 0.05);
             padding: 30px;
