--- a/index.html
+++ b/index.html
@@ -323,14 +323,14 @@
         <a href="https://line.me/ti/p/kuurTdUm7Z" 
            class="external-link line-link"
            target="_blank">
-            <span class="link-icon">💬</span>
+            <span class="link-icon">📱</span>
             透過LINE聯絡
         </a>
         
         <a href="https://www.threads.com/@p.p0728?hl=zh-tw" 
            class="external-link threads-link"
            target="_blank">
-            <span class="link-icon">🧵</span>
+            <span class="link-icon">🏸</span>
             Threads作品集
         </a>
     </div>
