--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
         }
 
         .threads-link::before {
-            content: "🧵 ";
+            content: "🏸 ";
         }
 
         /* 載入動畫 */
