--- a/index.html
+++ b/index.html
@@ -211,7 +211,13 @@
         }
 
         .threads-link::before {
-            content: "🏸 ";
+            content: "";
+            display: inline-block;
+            width: 16px;
+            height: 16px;
+            background-image: url('你的圖片路徑');
+            background-size: contain;
+            margin-right: 5px;
         }
 
         /* 載入動畫 */
