--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
             display: inline-block;
             width: 16px;
             height: 16px;
-            background-image: url('你的圖片路徑');
+            background-image: url('http://github.com/XPeterPP/PPBadminton.github.io/blob/main/Threads%20image');
             background-size: contain;
             margin-right: 5px;
         }
