--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
             display: inline-block;
             width: 16px;
             height: 16px;
-            background-image: url('https://xpeterpp.github.io/PPBadminton.github.io/Threads image.png");
+            background-image: url('https://xpeterpp.github.io/PPBadminton.github.io/Threads_image.png');
             background-size: contain;
             margin-right: 5px;
         }
