--- a/index.html
+++ b/index.html
@@ -217,7 +217,8 @@
             height: 4px;
             background-image: url('https://xpeterpp.github.io/PPBadminton.github.io/Threads_image.png');
             background-size: contain;
-            margin-right: 2px;
+            margin-right: 5px;
+             vertical-align: middle;
         }
 
         /* 載入動畫 */
