--- a/index.html
+++ b/index.html
@@ -211,14 +211,7 @@
         }
 
         .threads-link::before {
-            content: "";
-            display: inline-block;
-            width: 4px;
-            height: 4px;
-            background-image: url('https://xpeterpp.github.io/PPBadminton.github.io/Threads_image.png');
-            background-size: contain;
-            margin-right: 5px;
-             vertical-align: middle;
+            content: "🏸 ";
         }
 
         /* 載入動畫 */
@@ -330,7 +323,7 @@
         </a>
         
         <!-- Threads作品集連結 -->
-        <a href="https://www.threads.com/@p.p0728?hl=zh-tw" 
+        <a href="https://www.threads.net/@pp_stringer" 
            class="social-link threads-link"
            target="_blank">
             Threads作品集
