--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
         </a>
         
         <!-- Threads作品集連結 -->
-        <a href="https://www.threads.net/@pp_stringer" 
+        <a href="https://www.threads.net/@p.p0728" 
            class="social-link threads-link"
            target="_blank">
             Threads作品集
