--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                 進入價目表
             </a>
             
-            <a href="https://funnysong.cn/" 
+            <a href="https://gguosong.gitlab.io/string/SZ_76_V1.html" 
                target="_blank"
                class="btn btn-secondary"
                id="guideBtn">
