--- a/index.html
+++ b/index.html
@@ -339,9 +339,7 @@
         <!-- 暫停服務訊息 -->
         <div class="pause-message" id="pauseMessage">
             <p class="description-text">
-                ⚠️ 目前暫停服務中 ⚠️<br>
-                暫時無法提供穿線服務<br>
-                仍可透過LINE聯繫或查看作品集
+                ⚠️ 測試中 ⚠️
             </p>
         </div>
     </div>
